--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies" : 
   {
   	"browser-sync" : "2.11.2",
-  	"gulp" : "3.9.1"
+  	"gulp" : "3.9.1",
+	"gulp-compass" : "2.1.0"
   }
 }
